src/Style.scss
$teal: #05cfd3;
$purple: #590995;
$white: #f5f5f5;
$green: #03c4a1;
$red: #c62a88;
$raleway: "Raleway", sans-serif;
//Global
* {
  margin: 0;
  padding: 0;
}
*::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
  box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
  border-radius: 10px;
  background-color: #f5f5f500;
}

*::-webkit-scrollbar {
  width: 5px;
  background-color: #f5f5f500;
}

*::-webkit-scrollbar-thumb {
  border-radius: 10px;
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.05);
  box-shadow: 0 0 6px rgba(0, 0, 0, 0.05);
  background-color: rgba(255, 255, 255, 0.1);
}

*::-webkit-scrollbar-track-piece:end {
  background: transparent;
  margin-bottom: 5px;
}

*::-webkit-scrollbar-track-piece:start {
  background: transparent;
  margin-top: 5px;
}
h1,
h2,
h3,
h4,
h5,
p,
button {
  font-family: $raleway;
}

.app-container {
  min-height: 95vh;
}

.carousel {
  text-align: left;
  margin: auto;
  img {
    height: auto;
    max-width: 100%;
    object-fit: cover;
    padding-top: 1rem;
  }
  div {
    max-width: 80%;
  }
  a {
    color: white;
  }
}

.vote-average {
  background-color: $red;
  color: white;
  padding: 1rem;
  font-weight: bolder;
}
.loading-container {
  display: flex;
  height: 80vh;
  justify-content: center;
  align-items: center;
  h1 {
    font-size: 3rem;
  }
  color: $green;
  text-transform: uppercase;
}

.span-green {
  color: $green;
}
.span-green:hover {
  text-decoration: underline;
}

.user-score {
  background-color: $red;
  padding: 0.5rem;
  border-radius: 50%;
  font-weight: 700;
}
.error {
  width: 185px;
  height: 278px;
}
.gradient {
  background-repeat: repeat;
  object-fit: cover;
}

//End Global

//Landing
.hero-container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 80vh;
  text-align: center;
  padding: 4rem 0 4rem 0;
  color: white;
  background-repeat: no-repeat;
  object-fit: cover;
  background-size: 100%, cover;
  background-position: center;
  h1 {
    padding-bottom: 2rem;
    font-size: 2.5rem;
    font-weight: 600;
  }
  h2 {
    font-weight: lighter;
    padding-bottom: 1rem;
  }
  input {
    padding: 1rem;
    width: 100%;
    font-size: 1.5rem;
  }
  .button-group {
    display: grid;
    grid-template-columns: auto auto auto;
    gap: 1rem;
    button {
      background-color: black;
      outline: none;
      padding: 0.5rem;
      border-radius: 4px;
      border-color: black;
    }
  }

  button {
    padding: 1rem;
    background-color: $green;
    color: white;
    border: 2px solid $green;
    cursor: pointer;
    width: 100%;
    margin-top: 1rem;
    font-size: 1.5rem;
  }
}

//Landing Flex
.trending-container {
  margin: auto;
  padding: 4rem 3rem 5rem 3rem;
  background-color: rgb(5, 5, 5);
  color: white;
  .trending-card-container {
    display: flex;
    overflow: auto;
    gap: 2rem;
    padding-bottom: 1rem;
  }
  .trending-button {
    display: inline-flex;
    gap: 0.5rem;
    padding: 2rem 0 2rem 0;
    button {
      background-color: $white;
      border: none;
      font-size: 1.1rem;
      border-radius: 3px;
      width: 250px;
      padding: 1rem;
      text-transform: uppercase;
      cursor: pointer;
      outline: none;
    }
  }
}
//Landing Advert
.advert-container {
  width: 100%;
  background-repeat: no-repeat;
  object-fit: cover;
  background-size: 100%, cover;
  background-position: center;
  color: white;
  padding: 4rem;
  h1 {
    padding-bottom: 1rem;
    font-size: 3rem;
  }
  h2 {
    padding: 2rem 0 2rem 0;
    text-align: center;
  }
  ul {
    margin-top: 2rem;
    list-style-type: none;
    padding-bottom: 2rem;
  }
  .advert-grid {
    margin: auto;
    width: 60%;
  }

  .advert-classics {
    display: flex;
    overflow: auto;
    justify-content: center;
    align-items: center;
    gap: 2rem;
    img {
      transition: all 0.4s ease-in-out;
    }
    img:hover {
      transform: scale(1.03);
    }
  }
  .join-today-button {
    align-items: center;
    justify-content: center;
    display: flex;
    margin-top: 2rem;
    background-color: $green;
    width: 250px;
    margin-left: auto;
    margin-right: auto;
    padding: 2rem;
    text-transform: uppercase;
    font-weight: bolder;
    font-size: 1.25rem;
  }
}
//Landing Finished

//Movie-TV Page
.heading-container {
  height: 80vh;
  background-repeat: no-repeat;
  object-fit: cover;
  background-size: 100%, cover;
  background-position: center;
  color: white;

  .heading-grid {
    height: 80vh;
    display: grid;
    justify-content: center;
    align-items: center;
    grid-template-columns: auto auto;
    width: 80%;
    gap: 3rem;
    margin: auto;
    .tagline {
      color: rgba(255, 255, 255, 0.8);
      font-weight: lighter;
      font-style: italic;
    }

    p,
    h4 {
      padding: 1rem 0 1rem 0;
    }
  }
}
.movie-info-grid {
  width: 90%;
  padding: 4rem 0 4rem 0;
  margin: auto;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  color: white;
  h1,
  h2,
  p {
    padding-bottom: 1rem;
  }

  img {
    border-radius: 5px;
  }

  .cast-grid {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    text-align: center;
  }
  .show-more {
    grid-column: 1/5;
    background-color: $green;
    color: white;
    font-size: 1.1rem;
    margin: auto;
    padding: 1.25rem;
    text-transform: uppercase;
    border: 1px solid $green;
    border-radius: 5px;
    cursor: pointer;
    outline: none;
    margin-top: 1rem;
  }
}
.similar-movies-container {
  width: 90%;
  margin: auto;
  color: white;
  padding: 1rem 0 1rem 0;
  .similar-movies-card {
    display: flex;
    overflow: auto;
    gap: 1rem;
    padding-bottom: 2rem;
  }
}
.keyword-grid {
  display: inline-flex;
  .chip {
    background-color: white;
    color: black;
    width: fit-content;
    padding: 0.5rem;
    border-radius: 0.75rem;
    margin: 0.2rem;
    transition: 0.2s all ease-in-out;
  }
  .chip:hover {
    color: white;
    background-color: $green;
  }
}
//Movie Page End

//TV Page
.season-container {
  width: 90%;
  color: white;
  margin: auto;
  padding: 2rem 0 2rem 0;
  justify-content: center;
  align-items: center;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 2rem;
  .season-card {
    h2 {
      padding: 0.5rem 0 0.5rem 0;
    }
    img {
      width: 100%;
      object-fit: cover;
      display: block;
      border-radius: 5px;
      transition: all 0.4s ease-in-out;
    }
    img:hover {
      transform: scale(1.015);
    }
  }
}
//TV Season Page
.season-episode-container {
  width: 90%;
  color: white;
  margin: auto;
  padding: 2rem 0 2rem 0;

  h1 {
    padding-bottom: 2rem;
  }
  .season-episode-card {
    display: flex;
    gap: 2rem;
    background-color: #242424;
    padding: 1.5rem;
    transition: all 0.4s ease-in-out;
    margin: 1rem 0 1rem 0;
    border-radius: 5px;
    h5 {
      margin-top: 1rem;
    }
    img {
      border-radius: 3px;
    }
  }
  .season-episode-card:hover {
    background-color: black;
  }
}
//TV Episode Container
.tv-episode-container {
  width: 90%;
  margin: auto;
  color: white;
  padding: 2rem 0 2rem 0;
  .guest-star-container {
    display: flex;
    overflow: auto;
    gap: 1rem;
    img {
      border-radius: 5px;
    }
  }
}
.tv-episode-image-container {
  width: 90%;
  margin: auto;
  color: white;
  padding: 2rem 0 2rem 0;
  .tv-images-grid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 1rem;
    align-items: center;
    justify-content: center;
    img {
      height: auto;
      max-width: 100%;
      object-fit: cover;
      padding-top: 1rem;
      cursor: pointer;
    }
  }
}
//TV End

//Person Page

.person-container {
  height: auto;
  object-fit: cover;
  color: white;
  padding: 3rem 0 3rem 0;
  h4 {
    padding: 1rem 0 1rem 0;
  }
  .person-grid {
    height: 80vh;
    display: grid;
    justify-content: center;
    align-items: center;
    grid-template-columns: auto auto;
    width: 70%;
    gap: 3rem;
    margin: auto;
    img {
      border-radius: 5px;
    }
  }
  .person-facts {
    margin-top: 1rem;
    display: grid;
    grid-template-columns: auto auto;
  }
}
.star-container {
  width: 90%;
  margin: auto;
  color: white;
  h1 {
    padding: 2rem 0 2rem 0;
  }
  .star-credit-container {
    display: flex;
    overflow: auto;
    gap: 1rem;
    padding-bottom: 1.5rem;
    img {
      border-radius: 5px;
      max-height: 475px;
      padding-bottom: 1rem;
    }
  }
}
//Person Page End

//Search Page Start
.search-container {
  color: white;
  width: 70%;
  margin: auto;

  img {
    display: block;
  }
  .search-card {
    display: flex;
    margin: 1rem 0 1rem 0;
    border-radius: 0.5rem;
    background-color: #242424;
    transition: 0.2s all ease-in-out;
  }
  .search-card:hover {
    background-color: black;
  }
  .search-card-info {
    padding: 2rem;
    h4 {
      padding-top: 1rem;
    }
  }
  .search-error {
    height: 231px;
  }
}
//Media Queries
//Ipad Size - To Mobile
@media screen and (max-width: 1024px) {
  //Landing Page
  .hero-container {
    .hero-grid {
      width: 90%;
      margin: auto;
    }
  }
  .advert-container {
    padding: 1.5rem;
    .advert-grid {
      margin: auto;
      width: 90%;
    }
    .advert-classics {
      justify-content: start;
      align-items: flex-start;
    }
  }

  //Movie-TV Page
  .heading-container {
    height: auto;
    .heading-grid {
      height: auto;
      padding: 4rem 0 4rem 0;
      width: 90%;
      gap: 2rem;
      grid-template-columns: auto;
    }
  }
  .movie-info-grid {
    grid-template-columns: repeat(1, 1fr);
    gap: 2rem;
    .cast-grid {
      display: flex;
      overflow: auto;
      text-align: left;
      gap: 1.5rem;
    }
    .show-more {
      margin: auto;
    }
  }
  //TV Page
  .season-container {
    grid-template-columns: repeat(2, 1fr);
  }
  .season-episode-container {
    .season-episode-card {
      display: block;
      h4 {
        padding: 1rem 0 1rem 0;
        font-size: 1.7rem;
      }
      img {
        width: 100%;
      }
    }
  }
  .tv-episode-image-container {
    .tv-images-grid {
      grid-template-columns: repeat(2, 1fr);
    }
  }

  //Person Page
  .person-container {
    .person-grid {
      height: auto;
      display: block;
      width: 90%;
    }
  }
}
@media screen and (max-width: 768px) {
  //Landing Page

  .trending-container {
    padding: 4rem 1rem 5rem 1rem;
    text-align: center;
    .trending-card-container {
      text-align: left;
    }
    .trending-button {
      display: inline-block;
    }
    button {
      margin: 0.5rem 0 0.5rem 0;
    }
  }
}
@media screen and (max-width: 500px) {
  //Search Page
  .search-container {
    color: white;
    width: 90%;
    margin: auto;
    display: grid;
    img {
      margin: auto;
    }
    .search-card {
      display: block;
    }
    .search-card-info {
      padding: 1rem 1rem 2rem 1rem;
    }
  }
}

